# aoc

./: .gitignore  README.md  day01.py  day04.py  day06.py  pyproject.toml
2020/: day0.py  day01.py  day02.py  day03.py  day05.py  day07.py  day08.py  day09.py
