[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pytest = "^6.2.2"
pre-commit = "^2.11.1"
ipython = "^7.21.0"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --tb=short"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
